--- a/packages/plasma-new-hope/package.json
+++ b/packages/plasma-new-hope/package.json
@@ -26,11 +26,11 @@
     "build:replace-linaria-sc": "./scripts/replace-linaria_sc.sh",
     "build:replace-linaria-emotion": "./scripts/replace-linaria_emotion.sh",
     "build:emotion": "npm run build:emotion:esm && npm run build:emotion:cjs",
-    "build:emotion:cjs": "rm -rf emotion/cjs && BABEL_ENV=cjs EMOTION=true SC_NAMESPACE=plasma-new-hope babel ./src-emotion --out-dir ./emotion/cjs --extensions .ts,.tsx --copy-files",
-    "build:emotion:esm": "rm -rf emotion/es && BABEL_ENV=esm EMOTION=true SC_NAMESPACE=plasma-new-hope babel ./src-emotion --out-dir ./emotion/es --extensions .ts,.tsx --copy-files",
+    "build:emotion:cjs": "rm -rf emotion/cjs && swc ./src-emotion -d ./emotion/cjs --strip-leading-paths --config-file ./swc-emotion.config.json -C module.type=commonjs",
+    "build:emotion:esm": "rm -rf emotion/es && swc ./src-emotion -d ./emotion/es --strip-leading-paths --config-file ./swc-emotion.config.json -C module.type=es6",
     "build:styled-components": "npm run build:styled-components:esm && npm run build:styled-components:cjs",
-    "build:styled-components:cjs": "rm -rf styled-components/cjs && BABEL_ENV=cjs SC=true SC_NAMESPACE=plasma-new-hope babel ./src-sc --out-dir ./styled-components/cjs --extensions .ts,.tsx --copy-files",
-    "build:styled-components:esm": "rm -rf styled-components/es && BABEL_ENV=esm SC=true SC_NAMESPACE=plasma-new-hope babel ./src-sc --out-dir ./styled-components/es --extensions .ts,.tsx --copy-files",
+    "build:styled-components:cjs": "rm -rf styled-components/cjs && swc ./src-sc -d ./styled-components/cjs --strip-leading-paths --config-file ./swc-sc.config.json -C module.type=commonjs",
+    "build:styled-components:esm": "rm -rf styled-components/es && swc ./src-sc -d ./styled-components/es --strip-leading-paths --config-file ./swc-sc.config.json -C module.type=es6",
     "postbuild:styled-components": "rm -rf src-sc",
     "postbuild:emotion": "rm -rf src-emotion",
     "generate:typings": "tsc --outDir types --emitDeclarationOnly && tsc-alias",
