--- a/packages/plasma-web/package.json
+++ b/packages/plasma-web/package.json
@@ -86,8 +86,8 @@
     "prebuild": "rm -rf ./components ./es ./helpers ./hocs ./hooks ./mixins ./tokens ./types ./utils index.d.ts index.d.ts.map index.js index.js.map",
     "build": "npm run build:cjs && npm run build:esm && npm run build:css",
     "postbuild": "npm run generate:typings",
-    "build:cjs": "BABEL_ENV=cjs SC_NAMESPACE=plasma-web babel ./src --out-dir . --extensions .ts,.tsx",
-    "build:esm": "BABEL_ENV=esm SC_NAMESPACE=plasma-web babel ./src --out-dir ./es --extensions .ts,.tsx",
+    "build:cjs": "swc ./src -d . --strip-leading-paths -C module.type=commonjs --config-file ../../swc.config.json",
+    "build:esm": "swc ./src -d ./es --strip-leading-paths -C module.type=es6 --config-file ../../swc.config.json",
     "prebuild:css": "rm -rf src-css && ./scripts/copy-linaria-components.sh",
     "build:css": "BABEL_ENV=esm SC_NAMESPACE=plasma-web rollup -c",
     "postbuild:css": "rm -rf src-css",
