--- a/packages/sdds-insol/package.json
+++ b/packages/sdds-insol/package.json
@@ -95,8 +95,8 @@
     "prebuild:css": "rm -rf src-css && ./scripts/copy-linaria-components.sh",
     "postbuild": "npm run generate:typings",
     "build:styled-components": "npm run build:styled-components:esm && npm run build:styled-components:cjs",
-    "build:styled-components:cjs": "BABEL_ENV=cjs SC_NAMESPACE=sdds-srvc babel ./src --out-dir ./styled-components/cjs --extensions .ts,.tsx",
-    "build:styled-components:esm": "BABEL_ENV=esm SC_NAMESPACE=sdds-srvc babel ./src --out-dir ./styled-components/es --extensions .ts,.tsx",
+    "build:styled-components:cjs": "swc ./src -d ./styled-components/cjs --strip-leading-paths -C module.type=commonjs --config-file ../../swc.config.json",
+    "build:styled-components:esm": "swc ./src -d ./styled-components/es --strip-leading-paths -C module.type=es6 --config-file ../../swc.config.json",
     "build:css": "BABEL_ENV=esm SC_NAMESPACE=sdds-srvc rollup -c",
     "postbuild:css": "rm -rf src-css",
     "pregenerate:typings": "rm -rf components/**/*.d.ts && rm -f index.d.ts && rm -f mixins/index.d.ts && rm -f tokens/index.d.ts",
