--- a/packages/sdds-serv/package.json
+++ b/packages/sdds-serv/package.json
@@ -103,11 +103,11 @@
     "build:replace-st-emotion": "./scripts/replace-st_emotion.sh",
     "postbuild": "npm run generate:typings",
     "build:emotion": "npm run build:emotion:esm && npm run build:emotion:cjs",
-    "build:emotion:cjs": "rm -rf emotion/cjs && BABEL_ENV=cjs EMOTION=true SC_NAMESPACE=sdds-srvc babel ./src-emotion --out-dir ./emotion/cjs --extensions .ts,.tsx --copy-files",
-    "build:emotion:esm": "rm -rf emotion/es && BABEL_ENV=esm EMOTION=true SC_NAMESPACE=sdds-srvc babel ./src-emotion --out-dir ./emotion/es --extensions .ts,.tsx --copy-files",
+    "build:emotion:cjs": "rm -rf emotion/cjs && swc ./src-emotion -d ./emotion/cjs --strip-leading-paths -C module.type=commonjs --config-file ../../swc.config.json",
+    "build:emotion:esm": "rm -rf emotion/es && swc ./src-emotion -d ./emotion/es --strip-leading-paths -C module.type=es6 --config-file ../../swc.config.json",
     "build:styled-components": "npm run build:styled-components:esm && npm run build:styled-components:cjs",
-    "build:styled-components:cjs": "BABEL_ENV=cjs SC_NAMESPACE=sdds-srvc babel ./src --out-dir ./styled-components/cjs --extensions .ts,.tsx",
-    "build:styled-components:esm": "BABEL_ENV=esm SC_NAMESPACE=sdds-srvc babel ./src --out-dir ./styled-components/es --extensions .ts,.tsx",
+    "build:styled-components:cjs": "swc ./src -d ./styled-components/cjs --strip-leading-paths -C module.type=commonjs --config-file ../../swc.config.json",
+    "build:styled-components:esm": "swc ./src -d ./styled-components/es --strip-leading-paths -C module.type=es6 --config-file ../../swc.config.json",
     "build:css": "BABEL_ENV=esm SC_NAMESPACE=sdds-srvc rollup -c",
     "postbuild:css": "rm -rf src-css",
     "postbuild:emotion": "rm -rf src-emotion",
