--- a/packages/plasma-core/package.json
+++ b/packages/plasma-core/package.json
@@ -59,8 +59,8 @@
     "prebuild": "rm -rf ./components ./es ./hocs ./hooks ./mixins ./tokens ./types ./utils index.js index.js.map index.d.ts index.d.ts.map",
     "build": "npm run build:cjs && npm run build:esm",
     "postbuild": "npm run generate:typings",
-    "build:cjs": "BABEL_ENV=cjs SC_NAMESPACE=plasma babel ./src --out-dir . --extensions .ts,.tsx",
-    "build:esm": "BABEL_ENV=esm SC_NAMESPACE=plasma babel ./src --out-dir ./es --extensions .ts,.tsx",
+    "build:cjs": "swc ./src -d . --strip-leading-paths -C module.type=commonjs --config-file ../../swc.config.json",
+    "build:esm": "swc ./src -d ./es --strip-leading-paths -C module.type=es6 --config-file ../../swc.config.json",
     "generate:typings": "tsc --outDir . --emitDeclarationOnly",
     "test": "NODE_ICU_DATA=node_modules/full-icu jest",
     "test:watch": "NODE_ICU_DATA=node_modules/full-icu jest --watch",
