--- a/packages/plasma-icons/package.json
+++ b/packages/plasma-icons/package.json
@@ -62,9 +62,9 @@
     "generate:react": "npm run build:scripts && node ./scripts-build/generateReactComponents.js",
     "generate:react-native": "npm run build:scripts && node ./scripts-build/generateReactNativeComponents.js && rm -rf ./src-rn-build/Icon.svg.* ./src-rn-build/Icon*.tsx",
     "generate:ios": "node ./scripts/generateIconsIos.mjs",
-    "build:scripts": "BABEL_ENV=cjs babel ./scripts --out-dir ./scripts-build --extensions .ts,.tsx",
-    "build:cjs": "BABEL_ENV=cjs babel ./src-build --out-dir . --extensions .ts,.tsx",
-    "build:esm": "BABEL_ENV=esm babel ./src-build --out-dir ./es --extensions .ts,.tsx",
+    "build:scripts": "BABEL_ENV=cjs SC_NAMESPACE=plasma babel ./scripts --out-dir ./scripts-build --extensions .ts,.tsx",
+    "build:cjs": "swc ./src-build -d . --strip-leading-paths -C module.type=commonjs --config-file ../../swc.config.json",
+    "build:esm": "swc ./src-build -d ./es --strip-leading-paths -C module.type=es6 --config-file ../../swc.config.json",
     "build:css": "rollup -c",
     "lint": "../../node_modules/.bin/eslint ./src --ext .js,.ts,.tsx --quiet"
   },
