--- a/packages/sdds-cs/package.json
+++ b/packages/sdds-cs/package.json
@@ -93,11 +93,11 @@
     "build:replace-st-emotion": "./scripts/replace-st_emotion.sh",
     "postbuild": "npm run generate:typings",
     "build:emotion": "npm run build:emotion:esm && npm run build:emotion:cjs",
-    "build:emotion:cjs": "rm -rf emotion/cjs && BABEL_ENV=cjs EMOTION=true SC_NAMESPACE=sdds-srvc babel ./src-emotion --out-dir ./emotion/cjs --extensions .ts,.tsx --copy-files",
-    "build:emotion:esm": "rm -rf emotion/es && BABEL_ENV=esm EMOTION=true SC_NAMESPACE=sdds-srvc babel ./src-emotion --out-dir ./emotion/es --extensions .ts,.tsx --copy-files",
+    "build:emotion:cjs": "rm -rf emotion/cjs && swc ./src-emotion -d ./emotion/cjs --strip-leading-paths -C module.type=commonjs --config-file ../../swc.config.json",
+    "build:emotion:esm": "rm -rf emotion/es && swc ./src-emotion -d ./emotion/es --strip-leading-paths -C module.type=es6 --config-file ../../swc.config.json",
     "build:styled-components": "npm run build:styled-components:esm && npm run build:styled-components:cjs",
-    "build:styled-components:cjs": "BABEL_ENV=cjs SC_NAMESPACE=sdds-srvc babel ./src --out-dir . --extensions .ts,.tsx",
-    "build:styled-components:esm": "BABEL_ENV=esm SC_NAMESPACE=sdds-srvc babel ./src --out-dir ./es --extensions .ts,.tsx",
+    "build:styled-components:cjs": "swc ./src -d . --strip-leading-paths -C module.type=commonjs --config-file ../../swc.config.json",
+    "build:styled-components:esm": "swc ./src -d ./es --strip-leading-paths -C module.type=es6 --config-file ../../swc.config.json",
     "postbuild:styled-components": "rm -rf src-sc",
     "postbuild:emotion": "rm -rf src-emotion",
     "pregenerate:typings": "rm -rf components/**/*.d.ts && rm -f index.d.ts && rm -f mixins/index.d.ts && rm -f tokens/index.d.ts",
