--- a/packages/sdds-dfa/package.json
+++ b/packages/sdds-dfa/package.json
@@ -73,8 +73,8 @@
     "prebuild": "rm -rf ./components ./es ./helpers ./hocs ./hooks ./mixins ./tokens ./types ./utils index.d.ts index.d.ts.map index.js index.js.map",
     "build": "npm run build:cjs && npm run build:esm",
     "postbuild": "npm run generate:typings",
-    "build:cjs": "BABEL_ENV=cjs SC_NAMESPACE=sdds-srvc babel ./src --out-dir . --extensions .ts,.tsx",
-    "build:esm": "BABEL_ENV=esm SC_NAMESPACE=sdds-srvc babel ./src --out-dir ./es --extensions .ts,.tsx",
+    "build:cjs": "swc ./src -d . --strip-leading-paths -C module.type=commonjs --config-file ../../swc.config.json",
+    "build:esm": "swc ./src -d ./es --strip-leading-paths -C module.type=es6 --config-file ../../swc.config.json",
     "generate:typings": "tsc --outDir . --emitDeclarationOnly",
     "storybook": "storybook dev -p ${PORT:-7007} -c .storybook",
     "storybook:build": "storybook build -c .storybook -o build-sb",
