--- a/package.json
+++ b/package.json
@@ -86,6 +86,10 @@
     "@salutejs/eslint-config-base": "0.4.0",
     "@salutejs/perftool": "0.29.0",
     "@salutejs/prettier-config": "0.3.0",
+    "@swc/cli": "0.7.7",
+    "@swc/core": "1.12.1",
+    "@swc/plugin-emotion": "10.0.0",
+    "@swc/plugin-styled-components": "8.0.0",
     "@testing-library/cypress": "7.0.7",
     "@types/cypress-image-snapshot": "3.1.6",
     "@types/lodash": "4.14.191",
