--- a/utils/plasma-cy-utils/package.json
+++ b/utils/plasma-cy-utils/package.json
@@ -31,6 +31,7 @@
     "@salutejs/plasma-tokens-b2c": "0.61.0",
     "@salutejs/plasma-tokens-web": "1.65.0",
     "@salutejs/plasma-typo": "0.42.0",
+    "@salutejs/sdds-themes": "0.38.0",
     "@types/node": "18.16.20",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
