--- a/website/sdds-crm-docs/package.json
+++ b/website/sdds-crm-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-crm-docs",
-  "version": "0.4.0",
+  "version": "0.5.0-dev.0",
   "description": "SDDS-CRM documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -30,11 +30,11 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.495.0",
-    "@salutejs/plasma-icons": "1.218.0",
+    "@salutejs/plasma-docs-ui": "0.496.0-dev.0",
+    "@salutejs/plasma-icons": "1.219.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/sdds-crm": "0.313.0",
-    "@salutejs/sdds-themes": "0.38.0",
+    "@salutejs/sdds-crm": "0.314.0-dev.0",
+    "@salutejs/sdds-themes": "0.39.0-dev.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
