--- a/packages/plasma-core/package.json
+++ b/packages/plasma-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-core",
-  "version": "1.198.0",
+  "version": "1.199.0-dev.0",
   "description": "Core library for Plasma: Salute Design System.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -24,7 +24,7 @@
     "@babel/preset-react": "7.24.1",
     "@babel/preset-typescript": "7.24.1",
     "@microsoft/api-extractor": "7.38.3",
-    "@salutejs/plasma-cy-utils": "0.129.0",
+    "@salutejs/plasma-cy-utils": "0.130.0-dev.0",
     "@types/jest": "27.0.1",
     "@types/lodash.throttle": "4.1.6",
     "@types/node": "15.14.9",
