--- a/packages/plasma-hope/package.json
+++ b/packages/plasma-hope/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-hope",
-  "version": "1.343.0",
+  "version": "1.344.0-dev.0",
   "description": "Salute Design System / Internal React UI kit for web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@popperjs/core": "2.9.2",
-    "@salutejs/plasma-core": "1.198.0",
+    "@salutejs/plasma-core": "1.199.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0",
     "react-file-drop": "3.1.6",
     "react-popper": "2.3.0",
@@ -57,9 +57,9 @@
     "@babel/preset-typescript": "7.24.1",
     "@microsoft/api-extractor": "7.38.3",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-cy-utils": "0.129.0",
-    "@salutejs/plasma-icons": "1.218.0",
-    "@salutejs/plasma-sb-utils": "0.199.0",
+    "@salutejs/plasma-cy-utils": "0.130.0-dev.0",
+    "@salutejs/plasma-icons": "1.219.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.200.0-dev.0",
     "@salutejs/plasma-tokens-b2b": "1.50.0",
     "@salutejs/plasma-tokens-b2c": "0.61.0",
     "@salutejs/plasma-tokens-web": "1.65.0",
