--- a/packages/sdds-netology/package.json
+++ b/packages/sdds-netology/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-netology",
-  "version": "0.313.0",
+  "version": "0.314.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS NETOLOGY web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -30,7 +30,7 @@
     "directory": "packages/sdds-netology"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.326.0",
+    "@salutejs/plasma-new-hope": "0.327.0-dev.0",
     "@salutejs/plasma-themes": "0.34.0"
   },
   "peerDependencies": {
@@ -55,10 +55,10 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-core": "1.198.0",
-    "@salutejs/plasma-cy-utils": "0.129.0",
-    "@salutejs/plasma-icons": "1.218.0",
-    "@salutejs/plasma-sb-utils": "0.199.0",
+    "@salutejs/plasma-core": "1.199.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.130.0-dev.0",
+    "@salutejs/plasma-icons": "1.219.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.200.0-dev.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addons": "7.6.17",
