--- a/website/plasma-ui-docs/package.json
+++ b/website/plasma-ui-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-ui-docs",
-  "version": "0.575.0",
+  "version": "0.576.0-dev.0",
   "description": "Plasma Documentation.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -30,10 +30,10 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.495.0",
-    "@salutejs/plasma-icons": "1.218.0",
-    "@salutejs/plasma-tokens": "1.113.0",
-    "@salutejs/plasma-ui": "1.319.0",
+    "@salutejs/plasma-docs-ui": "0.496.0-dev.0",
+    "@salutejs/plasma-icons": "1.219.0-dev.0",
+    "@salutejs/plasma-tokens": "1.114.0-dev.0",
+    "@salutejs/plasma-ui": "1.320.0-dev.0",
     "@salutejs/use-virtual": "2.0.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
