ci(sdds-bizcom): enable package

--- a/.github/config-ci.json
+++ b/.github/config-ci.json
@@ -14,6 +14,7 @@
         "sdds-insol",
         "sdds-crm",
         "sdds-netology",
-        "sdds-scan"
+        "sdds-scan",
+        "sdds-bizcom"
     ]
 }
