--- a/website/sdds-cs-docs/package.json
+++ b/website/sdds-cs-docs/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@docusaurus/core": "3.6.1",
+    "@docusaurus/faster": "3.8.1",
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
