--- a/.github/workflows/cypress-by-cron-every-day.yml
+++ b/.github/workflows/cypress-by-cron-every-day.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scope: [cs]
+        scope: [cs,insol]
 
     uses: ./.github/workflows/cypress-common.yml
     with:
