--- a/.github/workflows/cypress-by-cron.yml
+++ b/.github/workflows/cypress-by-cron.yml
@@ -36,7 +36,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scope: [cs]
+        scope: [cs,insol]
 
     uses: ./.github/workflows/cypress-common.yml
     with:
