--- a/lerna.json
+++ b/lerna.json
@@ -13,7 +13,7 @@
     "exact": true,
     "command": {
         "bootstrap": {
-            "npmClientArgs": ["--no-audit", "--no-optional", "--loglevel error", "--no-progress", "--unsafe-perm"],
+            "npmClientArgs": ["--no-audit", "--loglevel error", "--no-progress", "--unsafe-perm"],
             "ignore": "@salutejs/sdds-clfd-auto"
         },
         "publish": {
