--- a/packages/plasma-new-hope/tsconfig.json
+++ b/packages/plasma-new-hope/tsconfig.json
@@ -9,6 +9,7 @@
         "sourceMap": true,
         "importHelpers": false,
         "downlevelIteration": true,
+        "emitDeclarationOnly": true,
 
         /* Strict Type-Checking Options */
         "strict": true,
@@ -34,8 +35,9 @@
         /* Advanced Options */
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
-        "outDir": "./",
+        "outDir": "./types",
         "rootDir": "./src",
+        "baseUrl": ".",
         "paths": {
             "src/*": ["./src/*"]
         }
