--- a/packages/plasma-b2c/package.json
+++ b/packages/plasma-b2c/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-b2c",
-  "version": "1.583.0",
+  "version": "1.584.0-dev.0",
   "description": "Salute Design System / React UI kit for business-related web applications.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -42,9 +42,9 @@
     "atLeast": 99.97
   },
   "dependencies": {
-    "@salutejs/plasma-core": "1.199.0",
-    "@salutejs/plasma-hope": "1.344.0",
-    "@salutejs/plasma-new-hope": "0.327.0",
+    "@salutejs/plasma-core": "1.200.0-dev.0",
+    "@salutejs/plasma-hope": "1.345.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.328.0-dev.0",
     "@salutejs/plasma-themes": "0.34.0",
     "@salutejs/plasma-tokens-b2c": "0.61.0",
     "@salutejs/plasma-tokens-web": "1.65.0",
@@ -71,9 +71,9 @@
     "@rollup/plugin-commonjs": "25.0.7",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-cy-utils": "0.130.0",
+    "@salutejs/plasma-cy-utils": "0.131.0-dev.0",
     "@salutejs/plasma-icons": "1.219.0",
-    "@salutejs/plasma-sb-utils": "0.200.0",
+    "@salutejs/plasma-sb-utils": "0.201.0-dev.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addon-knobs": "7.0.2",
