--- a/packages/sdds-insol/package.json
+++ b/packages/sdds-insol/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-insol",
-  "version": "0.310.0",
+  "version": "0.311.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS INSOL web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,8 +31,8 @@
     "directory": "packages/sdds-insol"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.327.0",
-    "@salutejs/sdds-themes": "0.39.0"
+    "@salutejs/plasma-new-hope": "0.328.0-dev.0",
+    "@salutejs/sdds-themes": "0.40.0-dev.0"
   },
   "peerDependencies": {
     "react": ">=16.13.1",
@@ -57,10 +57,10 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-core": "1.199.0",
-    "@salutejs/plasma-cy-utils": "0.130.0",
+    "@salutejs/plasma-core": "1.200.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.131.0-dev.0",
     "@salutejs/plasma-icons": "1.219.0",
-    "@salutejs/plasma-sb-utils": "0.200.0",
+    "@salutejs/plasma-sb-utils": "0.201.0-dev.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addons": "7.6.17",
