--- a/utils/plasma-cy-utils/package.json
+++ b/utils/plasma-cy-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-cy-utils",
-  "version": "0.130.0",
+  "version": "0.131.0-dev.0",
   "description": "Test helpers shared between ui libraries.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -26,12 +26,12 @@
   "devDependencies": {
     "@cypress/react": "5.12.0",
     "@salutejs/plasma-themes": "0.34.0",
-    "@salutejs/plasma-tokens": "1.114.0",
+    "@salutejs/plasma-tokens": "1.115.0-dev.0",
     "@salutejs/plasma-tokens-b2b": "1.50.0",
     "@salutejs/plasma-tokens-b2c": "0.61.0",
     "@salutejs/plasma-tokens-web": "1.65.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/sdds-themes": "0.39.0",
+    "@salutejs/sdds-themes": "0.40.0-dev.0",
     "@types/node": "18.16.20",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
