--- a/packages/plasma-ui/package.json
+++ b/packages/plasma-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-ui",
-  "version": "1.322.0-dev.0",
+  "version": "1.323.0-dev.0",
   "description": "Salute Design System.",
   "main": "index.js",
   "module": "es/index.js",
@@ -34,7 +34,7 @@
     "@babel/preset-react": "7.24.1",
     "@babel/preset-typescript": "7.24.1",
     "@salutejs/plasma-cy-utils": "0.132.0-dev.0",
-    "@salutejs/plasma-icons": "1.219.0",
+    "@salutejs/plasma-icons": "1.220.0-dev.0",
     "@salutejs/plasma-sb-utils": "0.202.0-dev.0",
     "@salutejs/plasma-tokens": "1.116.0-dev.0",
     "@salutejs/use-virtual": "2.0.0",
