--- a/packages/sdds-finportal/package.json
+++ b/packages/sdds-finportal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-finportal",
-  "version": "0.308.0-dev.0",
+  "version": "0.309.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS FinPortal web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "directory": "packages/sdds-finportal"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.329.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.330.0-dev.0",
     "@salutejs/sdds-themes": "0.41.0-dev.0"
   },
   "peerDependencies": {
@@ -39,7 +39,7 @@
     "@salutejs/plasma-colors": "0.15.0",
     "@salutejs/plasma-core": "1.201.0-dev.0",
     "@salutejs/plasma-cy-utils": "0.132.0-dev.0",
-    "@salutejs/plasma-icons": "1.219.0",
+    "@salutejs/plasma-icons": "1.220.0-dev.0",
     "@salutejs/plasma-sb-utils": "0.202.0-dev.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
