--- a/packages/sdds-insol/package.json
+++ b/packages/sdds-insol/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-insol",
-  "version": "0.312.0-dev.0",
+  "version": "0.313.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS INSOL web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,7 +31,7 @@
     "directory": "packages/sdds-insol"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.329.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.330.0-dev.0",
     "@salutejs/sdds-themes": "0.41.0-dev.0"
   },
   "peerDependencies": {
@@ -59,7 +59,7 @@
     "@salutejs/plasma-colors": "0.15.0",
     "@salutejs/plasma-core": "1.201.0-dev.0",
     "@salutejs/plasma-cy-utils": "0.132.0-dev.0",
-    "@salutejs/plasma-icons": "1.219.0",
+    "@salutejs/plasma-icons": "1.220.0-dev.0",
     "@salutejs/plasma-sb-utils": "0.202.0-dev.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
