fix(*): edit ts config new-hope

--- a/packages/plasma-new-hope/tsconfig.json
+++ b/packages/plasma-new-hope/tsconfig.json
@@ -43,5 +43,5 @@
         }
     },
     "include": ["./src"],
-    "exclude": ["./src/helpers", "./src/examples/", "./src/**/*.component-test.tsx"]
+    "exclude": ["./src/helpers", "./src/**/*.stories.tsx", "./src/**/*.component-test.tsx"]
 }
