--- a/packages/plasma-asdk/package.json
+++ b/packages/plasma-asdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-asdk",
-  "version": "0.345.0",
+  "version": "0.346.0-dev.0",
   "description": "Salute Design System / React UI kit for Assistant web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,9 +19,9 @@
     "directory": "packages/plasma-asdk"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.331.0",
-    "@salutejs/plasma-tokens": "1.118.0",
-    "@salutejs/plasma-tokens-b2b": "1.52.0",
+    "@salutejs/plasma-new-hope": "0.332.0-dev.0",
+    "@salutejs/plasma-tokens": "1.119.0-dev.0",
+    "@salutejs/plasma-tokens-b2b": "1.53.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0"
   },
   "peerDependencies": {
@@ -38,11 +38,11 @@
     "@babel/preset-react": "7.24.1",
     "@babel/preset-typescript": "7.24.1",
     "@microsoft/api-extractor": "7.38.3",
-    "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-core": "1.203.0",
-    "@salutejs/plasma-cy-utils": "0.133.0",
+    "@salutejs/plasma-colors": "0.16.0-dev.0",
+    "@salutejs/plasma-core": "1.204.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.134.0-dev.0",
     "@salutejs/plasma-icons": "1.222.0",
-    "@salutejs/plasma-sb-utils": "0.203.0",
+    "@salutejs/plasma-sb-utils": "0.204.0-dev.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addons": "7.6.17",
