--- a/packages/plasma-tokens/package.json
+++ b/packages/plasma-tokens/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-tokens",
-  "version": "1.118.0",
+  "version": "1.119.0-dev.0",
   "description": "plasma-tokens package",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -42,8 +42,8 @@
   },
   "devDependencies": {
     "@diez/web-sdk-common": "10.6.0",
-    "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-tokens-utils": "0.49.0",
+    "@salutejs/plasma-colors": "0.16.0-dev.0",
+    "@salutejs/plasma-tokens-utils": "0.50.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0",
     "@types/node": "^22.13.13",
     "jsdom": "17.0.0",
