--- a/packages/plasma-web/package.json
+++ b/packages/plasma-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-web",
-  "version": "1.589.0",
+  "version": "1.590.0-dev.0",
   "description": "Salute Design System / React UI kit for web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,13 +19,13 @@
     "directory": "packages/plasma-web"
   },
   "dependencies": {
-    "@salutejs/plasma-core": "1.203.0",
-    "@salutejs/plasma-hope": "1.348.0",
-    "@salutejs/plasma-new-hope": "0.331.0",
-    "@salutejs/plasma-themes": "0.36.0",
-    "@salutejs/plasma-tokens-b2b": "1.52.0",
-    "@salutejs/plasma-tokens-b2c": "0.63.0",
-    "@salutejs/plasma-tokens-web": "1.67.0",
+    "@salutejs/plasma-core": "1.204.0-dev.0",
+    "@salutejs/plasma-hope": "1.349.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.332.0-dev.0",
+    "@salutejs/plasma-themes": "0.37.0-dev.0",
+    "@salutejs/plasma-tokens-b2b": "1.53.0-dev.0",
+    "@salutejs/plasma-tokens-b2c": "0.64.0-dev.0",
+    "@salutejs/plasma-tokens-web": "1.68.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0"
   },
   "peerDependencies": {
@@ -48,10 +48,10 @@
     "@rollup/plugin-babel": "6.0.4",
     "@rollup/plugin-commonjs": "25.0.7",
     "@rollup/plugin-node-resolve": "15.2.3",
-    "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-cy-utils": "0.133.0",
+    "@salutejs/plasma-colors": "0.16.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.134.0-dev.0",
     "@salutejs/plasma-icons": "1.222.0",
-    "@salutejs/plasma-sb-utils": "0.203.0",
+    "@salutejs/plasma-sb-utils": "0.204.0-dev.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addons": "7.6.17",
