--- a/utils/plasma-sb-utils/package.json
+++ b/utils/plasma-sb-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-sb-utils",
-  "version": "0.203.0",
+  "version": "0.204.0-dev.0",
   "description": "Code shared between ui libraries.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,8 +19,8 @@
     "lint": "../../node_modules/.bin/eslint ./src --ext .ts,.tsx --quiet"
   },
   "dependencies": {
-    "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-core": "1.203.0",
+    "@salutejs/plasma-colors": "0.16.0-dev.0",
+    "@salutejs/plasma-core": "1.204.0-dev.0",
     "param-case": "^3.0.4"
   },
   "peerDependencies": {
