--- a/utils/plasma-tokens-utils/package.json
+++ b/utils/plasma-tokens-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-tokens-utils",
-  "version": "0.49.0",
+  "version": "0.50.0-dev.0",
   "description": "Code shared between token libraries.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -21,7 +21,7 @@
     "lint": "../../node_modules/.bin/eslint ./src --ext .ts --quiet"
   },
   "dependencies": {
-    "@salutejs/plasma-colors": "0.15.0",
+    "@salutejs/plasma-colors": "0.16.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0",
     "@theme-ui/css": "0.3.1",
     "color": "^4.2.3",
