--- a/website/sdds-dfa-docs/package.json
+++ b/website/sdds-dfa-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-dfa-docs",
-  "version": "0.247.0",
+  "version": "0.248.0-dev.0",
   "description": "SDDS-DFA documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,11 +31,11 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.500.0",
+    "@salutejs/plasma-docs-ui": "0.501.0-dev.0",
     "@salutejs/plasma-icons": "1.222.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/sdds-dfa": "0.317.0",
-    "@salutejs/sdds-themes": "0.43.0",
+    "@salutejs/sdds-dfa": "0.318.0-dev.0",
+    "@salutejs/sdds-themes": "0.44.0-dev.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
