ci(sdds-finai): add package

--- a/.github/config-ci.json
+++ b/.github/config-ci.json
@@ -10,7 +10,7 @@
         "sdds-serv",
         "sdds-dfa",
         "sdds-cs",
-        "sdds-finportal",
+        "sdds-finai",
         "sdds-insol",
         "sdds-crm",
         "sdds-netology",
