--- a/website/plasma-giga-docs/package.json
+++ b/website/plasma-giga-docs/package.json
@@ -38,6 +38,7 @@
     "@salutejs/plasma-typo": "0.42.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
+    "docusaurus-theme-search-typesense": "0.25.0",
     "file-loader": "^6.2.0",
     "prism-react-renderer": "2.3.1",
     "react": "18.2.0",
