--- a/website/plasma-b2c-docs/package.json
+++ b/website/plasma-b2c-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-b2c-docs",
-  "version": "0.218.0-dev.0",
+  "version": "0.218.0",
   "description": "Plasma Documentation.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,9 +31,9 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-b2c": "1.591.0-dev.0",
-    "@salutejs/plasma-docs-ui": "0.504.0-dev.0",
-    "@salutejs/plasma-icons": "1.223.0-dev.0",
+    "@salutejs/plasma-b2c": "1.591.0",
+    "@salutejs/plasma-docs-ui": "0.504.0",
+    "@salutejs/plasma-icons": "1.223.0",
     "@salutejs/plasma-tokens-b2c": "0.64.0",
     "@salutejs/plasma-tokens-web": "1.68.0",
     "@salutejs/plasma-typo": "0.42.0",
