--- a/packages/sdds-cs/package.json
+++ b/packages/sdds-cs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-cs",
-  "version": "0.327.0-dev.0",
+  "version": "0.327.0",
   "description": "Salute Design System / React UI kit for SDDS CS web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -30,8 +30,8 @@
     "directory": "packages/sdds-cs"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.335.0-dev.0",
-    "@salutejs/sdds-themes": "0.47.0-dev.0"
+    "@salutejs/plasma-new-hope": "0.335.0",
+    "@salutejs/sdds-themes": "0.47.0"
   },
   "peerDependencies": {
     "@emotion/react": ">=11",
@@ -54,10 +54,10 @@
     "@microsoft/api-extractor": "7.38.3",
     "@originjs/vite-plugin-commonjs": "1.0.3",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.207.0-dev.0",
-    "@salutejs/plasma-cy-utils": "0.137.0-dev.0",
-    "@salutejs/plasma-icons": "1.223.0-dev.0",
-    "@salutejs/plasma-sb-utils": "0.207.0-dev.0",
+    "@salutejs/plasma-core": "1.207.0",
+    "@salutejs/plasma-cy-utils": "0.137.0",
+    "@salutejs/plasma-icons": "1.223.0",
+    "@salutejs/plasma-sb-utils": "0.207.0",
     "@storybook/addon-docs": "8.6.14",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/manager-api": "8.6.14",
