--- a/packages/sdds-serv/package.json
+++ b/packages/sdds-serv/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-serv",
-  "version": "0.322.0-dev.0",
+  "version": "0.322.0",
   "description": "Salute Design System / React UI kit for SDDS SERV web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -32,8 +32,8 @@
     "directory": "packages/sdds-serv"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.335.0-dev.0",
-    "@salutejs/sdds-themes": "0.47.0-dev.0"
+    "@salutejs/plasma-new-hope": "0.335.0",
+    "@salutejs/sdds-themes": "0.47.0"
   },
   "peerDependencies": {
     "@emotion/react": ">=11",
@@ -63,10 +63,10 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.207.0-dev.0",
-    "@salutejs/plasma-cy-utils": "0.137.0-dev.0",
-    "@salutejs/plasma-icons": "1.223.0-dev.0",
-    "@salutejs/plasma-sb-utils": "0.207.0-dev.0",
+    "@salutejs/plasma-core": "1.207.0",
+    "@salutejs/plasma-cy-utils": "0.137.0",
+    "@salutejs/plasma-icons": "1.223.0",
+    "@salutejs/plasma-sb-utils": "0.207.0",
     "@storybook/addon-docs": "8.6.14",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/manager-api": "8.6.14",
