--- a/website/sdds-netology-docs/package.json
+++ b/website/sdds-netology-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-netology-docs",
-  "version": "0.13.0-dev.0",
+  "version": "0.13.0",
   "description": "SDDS-NETOLOGY documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,11 +31,11 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.504.0-dev.0",
-    "@salutejs/plasma-icons": "1.223.0-dev.0",
+    "@salutejs/plasma-docs-ui": "0.504.0",
+    "@salutejs/plasma-icons": "1.223.0",
     "@salutejs/plasma-themes": "0.37.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/sdds-netology": "0.322.0-dev.0",
+    "@salutejs/sdds-netology": "0.322.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
     "docusaurus-theme-search-typesense": "0.25.0",
