--- a/.github/workflows/cypress-common.yml
+++ b/.github/workflows/cypress-common.yml
@@ -14,6 +14,9 @@ on:
       with-react-17:
         type: boolean
         default: false
+      with-react-19:
+        type: boolean
+        default: false
       with-artifacts:
         type: boolean
         default: false
@@ -44,6 +47,11 @@ jobs:
         if:  ${{ inputs.with-react-17 }}
         run: |
           npm i --no-progress react@17 react-dom@17 @types/react@17.0.40 @types/react-dom@17 --prefix="./packages/${{ inputs.prefix }}-${{ inputs.scope }}"
+
+      - name: Install React 19
+        if:  ${{ inputs.with-react-19 }}
+        run: |
+          npm i --no-progress react@19 react-dom@19 @types/react@19 @types/react-dom@19 --prefix="./packages/${{ inputs.prefix }}-${{ inputs.scope }}"
 
       - name: Lerna bootstrap
         uses: nick-fields/retry@v3
