--- a/packages/plasma-b2c/package.json
+++ b/packages/plasma-b2c/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-b2c",
-  "version": "1.595.0-dev.0",
+  "version": "1.595.0",
   "description": "Salute Design System / React UI kit for business-related web applications.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -42,9 +42,9 @@
     "atLeast": 99.97
   },
   "dependencies": {
-    "@salutejs/plasma-core": "1.209.0-dev.0",
-    "@salutejs/plasma-hope": "1.355.0-dev.0",
-    "@salutejs/plasma-new-hope": "0.339.0-dev.0",
+    "@salutejs/plasma-core": "1.209.0",
+    "@salutejs/plasma-hope": "1.355.0",
+    "@salutejs/plasma-new-hope": "0.339.0",
     "@salutejs/plasma-themes": "0.38.0",
     "@salutejs/plasma-tokens-b2c": "0.65.0",
     "@salutejs/plasma-tokens-web": "1.69.0",
@@ -71,9 +71,9 @@
     "@rollup/plugin-commonjs": "25.0.7",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-cy-utils": "0.139.0-dev.0",
-    "@salutejs/plasma-icons": "1.226.0-dev.0",
-    "@salutejs/plasma-sb-utils": "0.209.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.139.0",
+    "@salutejs/plasma-icons": "1.226.0",
+    "@salutejs/plasma-sb-utils": "0.209.0",
     "@storybook/addon-docs": "8.6.14",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/manager-api": "8.6.14",
