--- a/packages/sdds-cs/package.json
+++ b/packages/sdds-cs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-cs",
-  "version": "0.331.0-dev.0",
+  "version": "0.331.0",
   "description": "Salute Design System / React UI kit for SDDS CS web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,8 +31,8 @@
     "directory": "packages/sdds-cs"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.339.0-dev.0",
-    "@salutejs/sdds-themes": "0.48.0-dev.0"
+    "@salutejs/plasma-new-hope": "0.339.0",
+    "@salutejs/sdds-themes": "0.48.0"
   },
   "peerDependencies": {
     "@emotion/react": ">=11",
@@ -55,10 +55,10 @@
     "@microsoft/api-extractor": "7.38.3",
     "@originjs/vite-plugin-commonjs": "1.0.3",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.209.0-dev.0",
-    "@salutejs/plasma-cy-utils": "0.139.0-dev.0",
-    "@salutejs/plasma-icons": "1.226.0-dev.0",
-    "@salutejs/plasma-sb-utils": "0.209.0-dev.0",
+    "@salutejs/plasma-core": "1.209.0",
+    "@salutejs/plasma-cy-utils": "0.139.0",
+    "@salutejs/plasma-icons": "1.226.0",
+    "@salutejs/plasma-sb-utils": "0.209.0",
     "@storybook/addon-docs": "8.6.14",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/manager-api": "8.6.14",
