--- a/website/sdds-insol-docs/package.json
+++ b/website/sdds-insol-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-insol-docs",
-  "version": "0.316.0-dev.0",
+  "version": "0.316.0",
   "description": "SDDS INSOL documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,11 +31,11 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.508.0-dev.0",
-    "@salutejs/plasma-icons": "1.226.0-dev.0",
+    "@salutejs/plasma-docs-ui": "0.508.0",
+    "@salutejs/plasma-icons": "1.226.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/sdds-insol": "0.322.0-dev.0",
-    "@salutejs/sdds-themes": "0.48.0-dev.0",
+    "@salutejs/sdds-insol": "0.322.0",
+    "@salutejs/sdds-themes": "0.48.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
     "docusaurus-theme-search-typesense": "0.25.0",
